Adding the authentication with JWT